--- a/voucher_assistant/frontend/public/index.html
+++ b/voucher_assistant/frontend/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#667eea" />
     <meta
       name="description"
-      content="OneU AI Voucher Assistant - Trợ lý AI thông minh giúp bạn hiểu rõ điều khoản voucher"
+      content="  AI Voucher Assistant - Trợ lý AI thông minh giúp bạn hiểu rõ điều khoản voucher"
     />
-    <title>OneU AI Voucher Assistant</title>
+    <title>  AI Voucher Assistant</title>
   </head>
   <body>
     <noscript>Bạn cần bật JavaScript để chạy ứng dụng này.</noscript>
